[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Gameplay/CO_Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Gameplay/CO_SpellController.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Spells/SC_Spell.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Other/SC_Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Core/SC_SceneTransition.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CubeMesh" id=2]
size = Vector3( 0.2, 0.2, 0.5 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_HP = 1

[node name="PlayerCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Camera" type="Camera" parent="Head"]
fov = 90.0

[node name="RightArm" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.378335, -0.561418, -0.696038 )
mesh = SubResource( 2 )
material/0 = null

[node name="LeftArm" type="MeshInstance" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394099, -0.561418, -0.696038 )
mesh = SubResource( 2 )
material/0 = null

[node name="Hand" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.999997, -0.00246091, 0, 0.00246091, 0.999997, 0, -0.728066, -1.40332 )

[node name="SpellController" type="Node" parent="."]
script = ExtResource( 2 )
startingSpell = ExtResource( 3 )

[node name="SceneTransition" parent="." instance=ExtResource( 5 )]

[connection signal="died_signal" from="Stats" to="." method="_on_Stats_died_signal"]
